--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 </div>
               </label>
               <div class="container_modal_comments">
-                <svg class="modal_svg_checked">
+                <!-- <svg class="modal_svg_checked">
                   <use href="images/SVG/icons.svg#icon-checked-modal"></use>
-                </svg>
+                </svg> -->
                 <p class="modal_label">
                   Estoy de acuerdo con el boletín informativo y acepto los
                   Términos y Condiciones
